# EB_Patrol

./: .gitignore  pyproject.toml  scraped_discussions.md  training_data.pkl  zooniverse_scraper_train.pkl
src/forum_scrapper/: crew.py  main.py  train.py
src/forum_scrapper/config/: agents.yaml  tasks.yaml
src/forum_scrapper/tools/: markdown_writer.py  selenium_scraper.py
